--- a/packages/trigger-sdk/package.json
+++ b/packages/trigger-sdk/package.json
@@ -39,6 +39,7 @@
     "get-caller-file": "^2.0.5",
     "git-remote-origin-url": "^4.0.0",
     "git-repo-info": "^2.1.1",
+    "js-sha1": "^0.7.0",
     "slug": "^6.0.0",
     "terminal-link": "^3.0.0",
     "ulid": "^2.3.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@trigger.dev/tsconfig": "workspace:*",
+    "@trigger.dev/tsup": "workspace:*",
     "@types/debug": "^4.1.7",
     "@types/node": "18",
     "@types/slug": "^5.0.3",
@@ -56,7 +58,6 @@
     "encoding": "^0.1.13",
     "rimraf": "^3.0.2",
     "tsup": "^8.0.1",
-    "@trigger.dev/tsup": "workspace:*",
     "typed-emitter": "^2.1.0",
     "typescript": "^5.3.0"
   },
