--- a/packages/trigger-sdk/package.json
+++ b/packages/trigger-sdk/package.json
@@ -35,7 +35,7 @@
     "chalk": "^5.2.0",
     "cronstrue": "^2.21.0",
     "debug": "^4.3.4",
-    "events": "^3.3.0",
+    "the-events": "npm:events@^3.3.0",
     "evt": "^2.4.13",
     "get-caller-file": "^2.0.5",
     "git-remote-origin-url": "^4.0.0",
@@ -52,7 +52,6 @@
     "@trigger.dev/tsconfig": "workspace:*",
     "@trigger.dev/tsup": "workspace:*",
     "@types/debug": "^4.1.7",
-    "@types/events": "^3.0.3",
     "@types/node": "18",
     "@types/slug": "^5.0.3",
     "@types/uuid": "^9.0.0",
